--- a/Nexus/appsettings.json
+++ b/Nexus/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultConnection": "data source=LAPTOP-CGFNOES8;initial catalog=Nexus;integrated security=True;TrustServerCertificate=True;;MultipleActiveResultSets=true"
+
 }
